--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
   </head>
   <body>
     <div id="message">
-      <h2>Welcome</h2>
+      <h2>Welcome, Messi se lo mereci</h2>
      
     </div>
     <!--p id="load">Firebase SDK Loading&hellip;</p-->
