--- a/public/elobservador/index.html
+++ b/public/elobservador/index.html
@@ -72,6 +72,7 @@
         <img src="bianchiiii.jpg" alt=""/>
       </div>
       <div class="cuerpo intro_ mb-3" itemprop="articleBody">
+        <h3>11 de septiembre de 2015 a las 13:17</h3>
         <p>La diputada Graciela Bianchi (Partido Nacional) 
           cuestionó al presidente Tabaré Vázquez por haber decidido la 
             esencialidad de la educación
