--- a/public/index.html
+++ b/public/index.html
@@ -63,33 +63,10 @@
   <body>
     <div id="message">
       <div>
-        <h1 class="titulo font-f_44 titulo--principal" itemprop="headline">Diputada Bianchi pidió elecciones anticipadas</h1>
         <p class="intro" itemprop="description">
-          <h2>La legisladora nacionalista consideró que está en riesgo la República y calificó al presidente Vázquez como "autoritario disimulado"</h2>
+          <h3>Página de noticias en construcción por milanga</h3>
         </p>
       </div>
-      <div>
-        <img src="bianchiiii.jpg" alt=""/>
-      </div>
-      <div class="cuerpo intro_ mb-3" itemprop="articleBody">
-        <p>La diputada Graciela Bianchi (Partido Nacional) 
-          cuestionó al presidente Tabaré Vázquez por haber decidido la 
-            esencialidad de la educación
-            y lo calificó de "autoritario disimulado" que en su opinión "son los peores".</p><div id="cuerpo_piano"><p>
-              La legisladora, que estuvo al frente del Liceo Bauzá y es recordada por haberle pedido respeto a los estudiantes que entraron a su oficina, 
-              advirtió que la situación actual del país es para que haya "elecciones anticipadas".</p><p>Entrevistada este viernes por Mariano López en 
-                El Observador TV, Bianchi consideró que "está en riesgo la República".</p><p><span id="saysCMSEmphasish7ehh64611o" class="saysCMSEmphasis">
-                  "Yo que soy partidaria de una democracia parlamentaria, no presidencialista, estamos en una situación para elecciones anticipadas"</span></p>
-                  <p><span id="saysCMSEmphasisaeslbquvwiwfjemi" class="">"Diga que en Uruguay estamos en un República presidencialista y la seguiremos remando", 
-                    afirmó Bianchi.</span></p><p>El periodista le pregunto si "la cosa es tan grave" como para que adelantar los comicios. 
-                      "Es gravísima la situación. Lo que pasa es que se barrió debajo de la alfombra", respondió.</p>
-                      <p>La diputada aclaró que sus expresiones no comprometen al Partido Nacional y menos a Luis Lacalle Pou, líder del sector Todos 
-                        al que ella pertenece.</p><p><br></p></div><ul class="tag">
-                         </div>
-     
-    </div>
-    <!--p id="load">Firebase SDK Loading&hellip;</p-->
-
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         const loadEl = document.querySelector('#load');
