--- a/public/elobservador/index.html
+++ b/public/elobservador/index.html
@@ -2,29 +2,26 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="viewport" content="width=device-width">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@ObservadorUY">
-    <meta name="twitter:creator" content="@ObservadorUY">
-    <meta name="robots" content="index, follow">
-    <meta name="distribution" content="global">
-    <meta name="rating" content="general">
-    <meta name="language" content="es_UY.UTF-8">
-    <meta itemprop="genre" content="News">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta itemprop="keywords" content="Educación">
-    <meta itemprop="keywords" content="Tabaré Vázquez">
-    <meta itemprop="keywords" content="Esencialidad">
-    <meta itemprop="keywords" content="Educación">
-    <meta itemprop="keywords" content="Esencialidad">
-    <meta itemprop="keywords" content="Partido Nacional">
-    <meta itemprop="keywords" content="Tabaré Vázquez">
-    <meta itemprop="keywords" content="Educación">
-    <meta itemprop="keywords" content="Esencialidad">
-    <meta itemprop="keywords" content="Partido Nacional">
-    <meta itemprop="keywords" content="Tabaré Vázquez">
+    <meta property="description" content="&quot;Entendíamos que debería hacerse por cuerdas separadas de lo que son los otros temas de investigación vinculados al caso de Astesiano&quot;, explicó el senador Bergara."/>
+    <meta property="og:site_name" content="@milangaconsalm1"/>
+    <meta property="og:description" content="La legisladora nacionalista consideró que está en riesgo la República y calificó al presidente Vázquez como 'autoritario disimulado'"/>
+    <meta property="og:image" content="https://noticias-uruguay.firebaseapp.com/elobservador/bianchiiii.jpg"/>
+    <meta property="og:type" content="article"/>
+    <meta property="og:url" content="https://noticias-uruguay.firebaseapp.com/elobservador/"/>
+    <meta property="og:title" content="Diputada Bianchi pidió elecciones anticipadas"/>
+    <meta itemprop="url" content="https://noticias-uruguay.firebaseapp.com/elobservador/"/>
+    <meta itemprop="name" content="Diputada Bianchi pidió elecciones anticipadas"/>
+    <meta itemprop="headline" content="Diputada Bianchi pidió elecciones anticipadas"/>
+    <meta itemprop="description" content="La legisladora nacionalista consideró que está en riesgo la República y calificó al presidente Vázquez como 'autoritario disimulado'"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:site" content="@ObservadorUY"/>
+    <meta name="twitter:title" content="Diputada Bianchi pidió elecciones anticipadas"/>
+    <meta name="twitter:description" content="La legisladora nacionalista consideró que está en riesgo la República y calificó al presidente Vázquez como 'autoritario disimulado'"/>
+    <meta name="twitter:creator" content="@ObservadorUY"/>
+    <meta name="twitter:image" content="https://noticias-uruguay.firebaseapp.com/elobservador/bianchiiii.jpg"/>
+    <meta name="twitter:image:width" content="0"/>
+    <meta name="twitter:player:height" content="0"/>
+    <meta name="twitter:image:height" content="0"/>
     <title>Welcome to Firebase Hosting</title>
 
     <!-- update the version number as needed -->
