--- a/public/elobservador/index.html
+++ b/public/elobservador/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta property="description" content="&quot;Entendíamos que debería hacerse por cuerdas separadas de lo que son los otros temas de investigación vinculados al caso de Astesiano&quot;, explicó el senador Bergara."/>
+    <meta property="description" content="La legisladora nacionalista consideró que está en riesgo la República y calificó al presidente Vázquez como 'autoritario disimulado'"/>
     <meta property="og:site_name" content="@milangaconsalm1"/>
     <meta property="og:description" content="La legisladora nacionalista consideró que está en riesgo la República y calificó al presidente Vázquez como 'autoritario disimulado'"/>
     <meta property="og:image" content="https://noticias-uruguay.firebaseapp.com/elobservador/bianchiiii.jpg"/>
@@ -14,15 +13,19 @@
     <meta itemprop="headline" content="Diputada Bianchi pidió elecciones anticipadas"/>
     <meta itemprop="description" content="La legisladora nacionalista consideró que está en riesgo la República y calificó al presidente Vázquez como 'autoritario disimulado'"/>
     <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:site" content="@ObservadorUY"/>
+    <meta name="twitter:site" content="@milangaconsalm1"/>
     <meta name="twitter:title" content="Diputada Bianchi pidió elecciones anticipadas"/>
     <meta name="twitter:description" content="La legisladora nacionalista consideró que está en riesgo la República y calificó al presidente Vázquez como 'autoritario disimulado'"/>
-    <meta name="twitter:creator" content="@ObservadorUY"/>
+    <meta name="twitter:creator" content="@milangaconsalm1"/>
     <meta name="twitter:image" content="https://noticias-uruguay.firebaseapp.com/elobservador/bianchiiii.jpg"/>
     <meta name="twitter:image:width" content="0"/>
-    <meta name="twitter:player:height" content="0"/>
     <meta name="twitter:image:height" content="0"/>
-    <title>Welcome to Firebase Hosting</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>  
+    <meta charset="UTF-8"/>  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>  
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Milanga</title>
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/9.14.0/firebase-app-compat.js"></script>
@@ -48,7 +51,7 @@
       #message h2 { color: #000; font-weight: bold; font-size: 22px; margin: 0 0 8px; }
       #message h1 { font-size: 36px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
       #message p { line-height: 140%; margin: 16px 0 24px; font-size: 16px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
+      #message a { display: block; text-align: center; text-transform:  none; padding: 16px; border-radius: 4px; }
       #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
       #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
       @media (max-width: 600px) {
@@ -56,6 +59,7 @@
         body { border-top: 16px solid #ffa100; }
       }
     </style>
+    <link rel="stylesheet" href="../css/bootstrap.css">
   </head>
   <body>
     <div id="message">
@@ -82,7 +86,8 @@
                     afirmó Bianchi.</span></p><p>El periodista le pregunto si "la cosa es tan grave" como para que adelantar los comicios. 
                       "Es gravísima la situación. Lo que pasa es que se barrió debajo de la alfombra", respondió.</p>
                       <p>La diputada aclaró que sus expresiones no comprometen al Partido Nacional y menos a Luis Lacalle Pou, líder del sector Todos 
-                        al que ella pertenece.</p><p><br></p></div><ul class="tag">
+                        al que ella pertenece.</p><p><br></p></div>
+                        fuente: <a href="https://www.elobservador.com.uy/nota/diputada-bianchi-pidio-elecciones-anticipadas-201591113170">https://www.elobservador.com.uy/nota/diputada-bianchi-pidio-elecciones-anticipadas-201591113170</a>
                          </div>
      
     </div>
