--- a/public/index.html
+++ b/public/index.html
@@ -2,30 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="viewport" content="width=device-width">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@ObservadorUY">
-    <meta name="twitter:creator" content="@ObservadorUY">
-    <meta name="robots" content="index, follow">
-    <meta name="distribution" content="global">
-    <meta name="rating" content="general">
-    <meta name="language" content="es_UY.UTF-8">
-    <meta itemprop="genre" content="News">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta itemprop="keywords" content="Educación">
-    <meta itemprop="keywords" content="Tabaré Vázquez">
-    <meta itemprop="keywords" content="Esencialidad">
-    <meta itemprop="keywords" content="Educación">
-    <meta itemprop="keywords" content="Esencialidad">
-    <meta itemprop="keywords" content="Partido Nacional">
-    <meta itemprop="keywords" content="Tabaré Vázquez">
-    <meta itemprop="keywords" content="Educación">
-    <meta itemprop="keywords" content="Esencialidad">
-    <meta itemprop="keywords" content="Partido Nacional">
-    <meta itemprop="keywords" content="Tabaré Vázquez">
-    <title>Welcome to Firebase Hosting</title>
+    
+    <title>Milanga</title>
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/9.14.0/firebase-app-compat.js"></script>
@@ -43,6 +21,7 @@
       initialize the SDK after all desired features are loaded, set useEmulator to false
       to avoid connecting the SDK to running emulators.
     -->
+    <link rel="stylesheet" href="css/bootstrap.css">
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 
     <style media="screen">
